--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <main>
         <section data-role="body-container">
             <section>
-                <div class="container">
+                <div >
                     <div class="row">
-                        <div class="col-lg-12 col-xl-6">
+                        <div class="col-lg-12 col-xl-6" >
                             <section class="image-text-container">
                                 <div data-role="main-image-container" data-description="This is the main image section">
                                     <img src="./Images/ajax.png" alt="Main Image" title="This is the main image"
